# instrumentering-og-styring

./: .gitignore  README.md  prosessrapport.tex
Fagrapport/: fagrapport.tex  hardware.tex  malsetning.tex  mer hardware  mexopencv_readme.md
Fagrapport/src/: .gitignore  CMakeLists.txt  README.md  car_detection.m  image_vision_tb_example.m  main.cpp  main.h  util.cpp
Fagrapport/src/car_detection/: build.sh  main.cpp
Fagrapport/src/com/: com.cpp  com.h
Fagrapport/src/red_ball/: CMakeLists.txt  main.cpp
Fagrapport/src/tracking/: CMakeLists.txt  com.cpp  com.h  const.h  main.cpp  main.h  util.cpp  util.h
Ny-rapport/: abstract.tex  bakgrunn.tex  diskusjon.tex  implementasjon.tex  innledning.tex  konklusjon.tex  rapport.bib  referanser.tex  teori.tex  top.tex  vedlegg.tex
Ny-rapport/img/: ArduinoKode.txt
code/: main.cpp  util.h
report/: compile.sh  diskusjon.tex  innledning.tex  rapport.bib  referanser.tex  vedlegg.tex
report/old/: fagrapport.bib  fagrapport.tex  rigg.tex
